--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,7 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -22,6 +19,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  width: 100%;
 }
 
 .App-link {
@@ -37,23 +35,16 @@
   }
 }
 /*    ---------------------new css code from html page--------------------------------------*/
-.row{
-  padding: 50px ;
-}
-.card{
-  padding: 10px;
-}
-.w3-row-padding{
-  padding-top: 100px;
-}
 
 
 nav .dropdown-item{
   background-color: black;
   color: white;
+  width: 100%;
 }
 header{
    position: fixed;
   top: 0;
   z-index: 2;
+  width: 100%;
 } 
